k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
  labels:
    app: flask-demo
spec:
  selector:
    app: flask-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
